--- a/test/tcp/CMakeLists.txt
+++ b/test/tcp/CMakeLists.txt
@@ -1,3 +1,3 @@
 
 add_executable(transparent_proxy transparent_proxy.cpp)
-target_link_libraries(transparent_proxy tcp_proxy)
+target_link_libraries(transparent_proxy t_proxy)
