create splice echo and epoll echo

--- a/test/event/CMakeLists.txt
+++ b/test/event/CMakeLists.txt
@@ -1,3 +1,6 @@
 
-add_executable(event_test echo_server.cpp)
+add_executable(event_test echo_server.cpp splice_echo.cpp splice_epoll_echo.cpp)
 target_link_libraries(event_test event)
+
+
+add_executable(splice_echo splice_echo.cpp)
