--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.7)
 project(net_exp)
 
 #set(CMAKE_C_STANDARD 99)
@@ -6,6 +6,15 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libstdc++ -static-libgcc  -static")
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_BUILD_TYPE "Debug")
+
+# add use llvm toolschain
+SET (CMAKE_C_COMPILER            "/usr/bin/clang")
+SET (CMAKE_CXX_COMPILER            "/usr/bin/clang++")
+SET (CMAKE_AR     "/usr/bin/llvm-ar")
+SET (CMAKE_LINKER "/usr/bin/lld")
+SET (CMAKE_NM     "/usr/bin/llvm-nm")
+SET (CMAKE_OBJDUMP"/usr/bin/llvm-objdump")
+SET (CMAKE_RANLIB "/usr/bin/llvm-ranlib")
 
 #设置安装目录
 set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/target)
